--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+.DS_Store
+
 /[Ii]gnore/
 /[Ll]ibrary/
 /[Tt]emp/
